--- a/web/public/index.html
+++ b/web/public/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+	<title>RCmd - Web UI</title>
 	<meta charset="UTF-8" />
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
